Fix alignment of tournament indicator, add a little more spacing between indicators

--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -309,7 +309,7 @@ navbar-width= 17rem;
     }
 
 
-    .FriendIndicator, .IncidentReportIndicator {
+    .FriendIndicator, .IncidentReportIndicator, .TournamentIndicator {
         margin-bottom: -3px;
         margin-top: 1px;
     }
